correct style alignment with card

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,5 @@
 .card {
-  width: 500px;
-  height: 100px;
+  min-height: 100%;
   margin: 10px !important;
 }
 .border {
